--- a/index.css
+++ b/index.css
@@ -1,366 +1,595 @@
- .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://assets.nicepagecdn.com/e452f9ed/5713630/images/bgcampfire.jpg');
-  background-position: 50% 50%;
+/* Шрифты */
+@font-face {
+    font-family: Montserrat;
+    src: url('fonts/Montserrat.ttf');
+}
+@font-face {
+    font-family: Unbounded;
+    src: url('fonts/Unbounded.ttf');
 }
 
-.u-section-1 .u-sheet-1 {
-  min-height: 529px;
+/* Переменные */
+:root {
+  --accent-color: #a880ff;
+  --background-primary-color: #fffafa;
+  --background-secondary-color: #eeeeee;
+  --background-tertiary-color: #dddddd;
+  --primary-color: #212121;
+  --primary-color-muted: #555555;
+}
+:root[theme="dark"] {
+  --accent-color: #a880ff;
+  --background-primary-color: #212121;
+  --background-secondary-color: #191919;
+  --background-tertiary-color: #555555;
+  --primary-color: #f8f8f8;
+  --primary-color-muted: #b0b0b0;
 }
 
-.u-section-1 .u-image-1 {
-  width: 570px;
-  height: 89px;
-  margin: 244px auto 0;
-}
-
-.u-section-1 .u-text-1 {
-  font-weight: 600;
-  font-size: 1.5rem;
-  margin: 60px auto;
-}
-
-@media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 436px;
-  }
-
-  .u-section-1 .u-text-1 {
-    font-size: 1.25rem;
-    width: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 477px;
-  }
-
-  .u-section-1 .u-image-1 {
-    margin-top: 204px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-left: 20px;
-    margin-right: 20px;
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
   }
 }
 
-@media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 492px;
+::selection {
+  background: var(--accent-color);
+  color: var(--background-primary-color);
+}
+
+body {
+  margin: 0;
+  background-color: var(--background-primary-color);
+  color: var(--primary-color);
+  font-family: Montserrat, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow-x: hidden;
+}
+
+h1, h2, h3 {
+  font-family: Unbounded, Montserrat, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: var(--accent-color);
+  transition: 0.3s ease;
+}
+a:hover {
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
+.d-flex { display: flex; }
+.flex-justify-center { justify-content: center; }
+.flex-align-center { align-items: center; }
+.f-column {flex-direction: column;}
+.text-muted {color: var(--primary-color-muted);}
+
+/* Ссылки */
+
+.link, span {
+  position: relative;
+  text-shadow: var(--background-primary-color) 0.1em 0.1em 0.5em;
+}
+.link::after,
+span::after {
+  position: absolute;
+  content: '';
+  display: block;
+  transition: 0.3s ease;
+  
+  bottom: -0.1rem;
+  left: -0.2rem;
+  height: 0.5em;
+  border-radius: 0.25rem;
+
+  z-index: -1;
+  background: var(--accent-color);
+  width: 0;
+}
+.link:hover:after,
+span::after {
+  width: 100%;
+}
+
+span::after {background: var(--accent-color)}
+
+.link-button {
+  background-color: var(--background-tertiary-color);
+  fill: var(--background-primary-color);
+  text-decoration: none;
+  padding: 0.75rem;
+  text-align: center;
+  transition: 0.3s ease;
+}
+.link-button:hover {
+  background-color: var(--primary-color-muted);
+  box-shadow: var(--accent-color) 0.25em 0.25em;
+  fill: var(--accent-color);
+}
+
+.button {
+  padding: 1rem;
+  background-color: var(--accent-color);
+  color: var(--background-primary-color);
+  border-radius: 1rem;
+}
+.button:hover {
+  background-color: var(--background-primary-color);
+  color: var(--primary-color);
+  transform: scale(110%);
+}
+
+/* Уведомление */
+
+#notification {
+  position: fixed;
+  z-index: 10;
+  background-color: var(--background-secondary-color);
+  border-radius: 1rem;
+  padding: 1em;
+  bottom: -10em;
+  right: 1em;
+  transition: bottom 0.5s cubic-bezier(1,.24,0,.9);
+}
+#notification.show {bottom: 1em;}
+
+#notification > * {margin: 0.5em;}
+
+/* Навигация */
+
+nav {
+    background-color: var(--background-secondary-color);
+    position: fixed;
+    width: 100vw;
+    top: 0;
+    z-index: 3611;
+}
+.navbar {
+    width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo {
+    height: 4em;
+    width: 4em;
+}
+.links {
+  padding-left: 0;
+  list-style-type: none;
+}
+.links > li {
+  margin: 0 0.5rem 0 0.5rem;
+}
+.menu-button {display: none;}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
   }
-
-  .u-section-1 .u-image-1 {
-    width: 480px;
-    height: 75px;
-    margin-top: 213px;
+  to {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
-
-@media (max-width: 575px) {
-   .u-section-1 {
-    background-position: 50% 50%;
+@keyframes slideUp {
+  from {
+    transform: translateY(0);
+    opacity: 1;
   }
-
-  .u-section-1 .u-sheet-1 {
-    min-height: 560px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 285px;
-    height: 44px;
-    margin-top: 222px;
-  }
-
-  .u-section-1 .u-text-1 {
-    font-size: 1.125rem;
-    margin-top: 28px;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-}.u-section-2 .u-sheet-1 {
-  min-height: 50vw;
-}
-
-.u-section-2 .u-text-1 {
-  font-weight: 700;
-  font-size: 2.25rem;
-  margin: 90px auto 0;
-}
-
-.u-section-2 .u-layout-wrap-1 {
-  width: 800px;
-  margin: 59px auto 60px;
-}
-
-.u-section-2 .u-layout-cell-1 {
-  min-height: 730px;
-  background-image: none;
-}
-
-.u-section-2 .u-container-layout-1 {
-  padding: 29px 30px 30px;
-}
-
-.u-section-2 .u-image-1 {
-  width: 248px;
-  height: 248px;
-  margin: 1px auto 0;
-}
-
-.u-section-2 .u-text-2 {
-  font-weight: 700;
-  text-transform: uppercase;
-  margin: 30px 0 0;
-}
-
-.u-section-2 .u-text-3 {
-  margin: 25px 0 0;
-}
-
-.u-section-2 .u-text-4 {
-  margin: 31px 0 0;
-}
-
-.u-section-2 .u-btn-1 {
-  background-image: none;
-  font-weight: 700;
-  margin: 35px auto 0;
-}
-
-.u-section-2 .u-layout-cell-2 {
-  min-height: 729px;
-}
-
-.u-section-2 .u-container-layout-2 {
-  padding: 26px 30px;
-}
-
-.u-section-2 .u-image-2 {
-  width: 248px;
-  height: 248px;
-  margin: 0 auto;
-}
-
-.u-section-2 .u-text-5 {
-  font-weight: 700;
-  text-transform: uppercase;
-  margin: 33px 0 0;
-}
-
-.u-section-2 .u-text-6 {
-  margin: 25px 0 0;
-}
-
-.u-section-2 .u-text-7 {
-  margin: 60px 0 0;
-}
-
-.u-section-2 .u-btn-2 {
-  background-image: none;
-  font-weight: 700;
-  margin: 40px auto 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 303px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-layout-wrap-1 {
-    width: 720px;
-  }
-
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 700px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-2 .u-layout-wrap-1 {
-    width: 540px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 616px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+  to {
+    transform: translateY(-100%);
+    opacity: 0;
   }
 }
 
-@media (max-width: 575px) {
-  .u-section-2 .u-layout-wrap-1 {
-    width: 340px;
+nav > .navbar > .links.show-navbar {
+  display: flex;
+  z-index: -1;
+  transform: translateY(0);
+  animation: slideDown 0.5s forwards;
+}
+
+nav > .navbar > .links.hide-navbar {
+  animation: slideUp 0.5s forwards;
+  transform: translateY(-100%);
+}
+
+@media screen and (max-width: 960px) {
+  nav > .navbar > .links {
+    display: none;
+    position: absolute;
+
+    flex-direction: column;
+
+    left: 0;
+    top: 3rem;
+    padding: 1em 0;
+    background-color: var(--background-secondary-color);
+    width: 100vw;
+    z-index: 0;
+  }
+  nav > .navbar > .links > li {margin: 1em;}
+  .links > li {margin: 1.5rem 0;}
+  .links .link::after {height: 0px !important;}
+  nav > .navbar {max-height: 5em; width: 95vw;}
+
+  .menu-button {
+    display: flex;
+    top: 1em;
+    right: 1em;
+    z-index: 10;
+    width: 2em;
+    padding: 1em;
+    fill: var(--primary-color-muted);
+    border-radius: 1rem;
   }
 
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 635px;
+  .links.show-navbar {
+    display: flex;
+    transition: transform 0.5s ease;
   }
-}.u-section-3 .u-sheet-1 {
-  min-height: 400px;
 }
 
-.u-section-3 .u-text-1 {
-  font-weight: 700;
-  margin: 41px auto 0;
+/* Контент */
+
+section{
+  min-height: 100vh;
+  margin-bottom: 3rem;
+  position: relative;
+}
+.width-75 {width: 75%;}
+section > .column-space-around {
+  min-height: 90%;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-.u-section-3 .u-social-icons-1 {
-  height: 150px;
-  min-height: 16px;
-  width: 630px;
-  min-width: 94px;
-  margin: 41px auto 60px;
+@media screen and (max-width: 580px) {
+  .width-75 {max-width: 100%;}
 }
 
-.u-section-3 .u-icon-1 {
+/* Баннер */
+#banner {
+  background-image: url("images/background.webp");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+
+  justify-content: space-around;
+  position: relative;
+  -webkit-mask: linear-gradient(
+    to bottom,
+    var(--background-primary-color) 75%,
+    var(--background-primary-color) 100%
+  );
+}
+#banner::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    var(--background-primary-color) 100%
+  );
 }
-
-.u-section-3 .u-icon-2 {
-  height: 100%;
+#banner > #welcome-text {
+  z-index: 1;
+  max-width: 75%;
 }
+#banner > #welcome-text > div {margin-top: 2.5rem;}
 
-.u-section-3 .u-icon-3 {
-  height: 100%;
+/* О сервере */
+#about-server-info {min-height: 80vh;}
+#about-server-info > .button {margin-top: 4rem;}
+
+/* Карточки */
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
 }
-
-.u-section-3 .u-icon-4 {
-  height: 100%;
+.card-divider {
+  position: relative;
+  width: 15vw;
+  height: 15vw;
+  z-index: 0;
+  opacity: 0.9;
 }
-
-@media (max-width: 991px) {
-  .u-section-3 .u-social-icons-1 {
-    height: 124px;
-    width: 527px;
-    margin-top: 54px;
+.card-divider:nth-of-type(1) {transform: rotate(25deg); left: 5em; bottom: 2em;}
+.card-divider:nth-of-type(2) {transform: rotate(-17deg); right: 3em; top: 4em;}
+@media screen and (max-width: 1500px) {
+  .card-divider {display: none;}
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--background-secondary-color);
+  border-radius: 1rem;
+  padding: 1rem;
+  overflow: hidden;
+  position: relative;
+  margin: 1rem;
+  max-width: 25%;
+  min-width: 360px;
+}
+@media screen and (max-width: 480px) {
+  .card {
+    transform: scale(90%);
+    min-width: 300px !important;
+    margin: 0.25em;
   }
 }
-
-@media (max-width: 767px) {
-  .u-section-3 .u-social-icons-1 {
-    height: 99px;
-    width: 426px;
-    margin-top: 73px;
-  }
+.card > * {
+  margin: 0.5em;
+  z-index: 1;
+}
+.card-icon {
+  position: absolute;
+  transform: rotate(15deg);
+  width: 15em;
+  bottom: -5em;
+  right: -6em;
+  z-index: 0;
+  fill: var(--background-primary-color);
 }
 
-@media (max-width: 575px) {
-  .u-section-3 .u-social-icons-1 {
-    height: 79px;
-    width: 346px;
-    margin-top: 91px;
-    margin-left: -3px;
-    margin-right: -3px;
-  }
-}.u-section-4 .u-sheet-1 {
-  min-height: 629px;
+@media screen and (min-width: 1500px) {
+  #about-server-info > .cards > .card:nth-of-type(1) {transform: rotate(2deg);}
+  #about-server-info > .cards > .card:nth-of-type(2) {transform: rotate(-3deg);}
+  #about-server-info > .cards > .card:nth-of-type(3) {transform: rotate(-3deg);}
+  #about-server-info > .cards > .card:nth-of-type(4) {transform: rotate(4deg);}
 }
 
-.u-section-4 .u-text-1 {
-  font-weight: 700;
-  font-size: 2.25rem;
-  margin: 80px auto 0;
+/* Как к нам присоедениться */
+#join-content {max-width: 70vw; z-index: 1; position: relative;}
+#join-content > div > p {margin: 0 0 1rem 0;}
+#join-content > .cards > .card {
+  min-width: 360px;
+}
+.server-ip {
+  background-color: var(--background-primary-color);
+  padding: 1rem;
+  border-radius: 1rem;
+  justify-content: space-between;
+}
+.server-ip * {margin: 0;}
+.server-ip .copy-button {
+  width: 1em;
+  fill: var(--primary-color-muted);
+}
+.ip-buttons > * {margin: 0 0.5em 0 0.5em;}
+.server-ip .copy-button:hover {fill: var(--accent-color);}
+
+#join-content > #interest {margin-top: 2em;}
+
+#join-content > .join-divider {
+  position: absolute;
+  scale: 150%;
+}
+#join-content > .join-divider:nth-of-type(1) {
+  transform: rotate(-17deg);
+  left: -9em;
+  bottom: -3em;
+}
+#join-content > .join-divider:nth-of-type(2) {
+  transform: rotate(-14deg);
+  right: -12em;
+  top: 9em;
+}
+.dots {
+  position: absolute;
+  transform: rotate(7deg);
+  z-index: -5;
+  fill: var(--background-secondary-color);
+  scale: 85%;
+  opacity: 50%;
+}
+@media screen and (max-width: 1280px) {
+  #join-content > .join-divider {display: none;}
+  .dots {display: none;}
+}
+@media screen and (max-height: 840px) {
+  .dots {scale: 65%;}
+}
+@media screen and (max-height: 720px) {
+  .dots {display: none;}
 }
 
-.u-section-4 .u-accordion-1 {
-  margin-top: 67px;
-  margin-bottom: 60px;
+/* Частые вопросы */
+
+#faq > h1 {margin: 3em;}
+
+.spoiler {
+  background-color: var(--background-secondary-color);
+  overflow: hidden;
+  border-radius: 1em;
+  transition: background-color 0.3s;
+  margin: 0.5em;
+
+  width: 90%;
 }
 
-.u-section-4 .u-accordion-item-1 {
-  margin-top: 0;
-  margin-bottom: 0;
+.spoiler-button {
+  display: block;
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.25em;
+  text-decoration: solid;
+  color: var(--primary-color);
+  transition: background-color 0.3s, color 0.3s;
+}
+.spoiler-button:hover {background-color: var(--background-tertiary-color);}
+
+.spoiler-content {
+  max-height: 0;
+  overflow: hidden;
+  background-color: var(--background-tertiary-color);
+  transition: max-height 0.3s ease-out, padding 0.3s;
+}
+.spoiler-content > p {margin: 0 1em 1em 1em;}
+.spoiler-content span {color: var(--accent-color);}
+
+.spoiler.active {background-color: var(--background-tertiary-color);}
+.spoiler.active .spoiler-button {color: var(--accent-color);}
+.spoiler.active .spoiler-content {
+  max-height: 35vh;
+  padding: 1em;
 }
 
-.u-section-4 .u-accordion-link-1 {
-  font-weight: 700;
-  background-image: none;
-  padding: 20px 30px;
+#faq > .divider {position: absolute; display: none; scale: 150%; z-index: -1;}
+
+@media screen and (min-width: 1500px) {
+  #faq > .divider {display: inline;}
+  #faq > .divider:nth-of-type(2) { top: 9em; left: 15em; transform: rotate(-17deg); }
+  #faq > .divider:nth-of-type(1) { bottom: 6em; right: 8em; transform: rotate(12deg); }
+}
+/* Футер */
+
+footer {
+  background-color: var(--background-secondary-color);
+  bottom: 0;
+  justify-content: space-between;
+  flex-direction: column;
+}
+footer > p { max-width: 75%; }
+footer .link { z-index: 0; }
+#footer-links {margin: 0 1rem 0 1rem;}
+#footer-links > * {margin: 0 0.25rem 0 0.25rem;}
+
+@media screen and (max-width: 960px) {
+  footer > .navbar {flex-direction: column;}
 }
 
-.u-section-4 .u-icon-1 {
-  height: 20px;
-  width: 20px;
-  color: rgb(153, 153, 153) !important;
-}
+/* normalize */
 
-.u-section-4 .u-accordion-pane-1 {
-  min-height: 80px;
+:where(html) {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+:where(h1) {
+  font-size: 2em;
+  margin-block-end: 0.67em;
+  margin-block-start: 0.67em;
+}
+:where(dl, ol, ul) :where(dl, ol, ul) {
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+:where(hr) {
+  box-sizing: content-box;
+  color: inherit;
+  height: 0;
+}
+:where(abbr[title]) {
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+:where(b, strong) {
+  font-weight: bolder;
+}
+:where(code, kbd, pre, samp) {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+:where(small) {
+  font-size: 80%;
+}
+:where(table) {
+  border-color: currentColor;
+  text-indent: 0;
+}
+:where(button, input, select) {
+  margin: 0;
+}
+:where(button) {
+  text-transform: none;
+}
+:where(
+    button,
+    input:is([type="button" i], [type="reset" i], [type="submit" i])
+  ) {
+  -webkit-appearance: button;
+}
+:where(progress) {
+  vertical-align: baseline;
+}
+:where(select) {
+  text-transform: none;
+}
+:where(textarea) {
+  margin: 0;
+}
+:where(input[type="search" i]) {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
   height: auto;
 }
-
-.u-section-4 .u-container-layout-1 {
-  padding: 20px 30px;
+::-webkit-input-placeholder {
+  color: inherit;
+  opacity: 0.54;
 }
-
-.u-section-4 .u-accordion-item-2 {
-  margin-top: 20px;
-  margin-bottom: 0;
+::-webkit-search-decoration {
+  -webkit-appearance: none;
 }
-
-.u-section-4 .u-accordion-link-2 {
-  font-weight: 700;
-  background-image: none;
-  padding: 20px 30px;
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
 }
-
-.u-section-4 .u-icon-2 {
-  height: 20px;
-  width: 20px;
-  color: rgb(153, 153, 153) !important;
-}
-
-.u-section-4 .u-accordion-pane-2 {
-  min-height: 80px;
-  height: auto;
-}
-
-.u-section-4 .u-container-layout-2 {
-  padding: 20px 30px;
-}
-
-.u-section-4 .u-accordion-link-3 {
-  font-weight: 700;
-  background-image: none;
-  padding: 20px 30px;
-}
-
-.u-section-4 .u-icon-3 {
-  height: 20px;
-  width: 20px;
-  color: rgb(153, 153, 153) !important;
-}
-
-.u-section-4 .u-accordion-pane-3 {
-  min-height: 80px;
-  height: auto;
-}
-
-.u-section-4 .u-container-layout-3 {
-  padding: 20px 30px;
-}
-
-.u-section-4 .u-btn-1 {
-  background-image: none;
+:where(
+    button,
+    input:is(
+        [type="button" i],
+        [type="color" i],
+        [type="reset" i],
+        [type="submit" i]
+      )
+  )::-moz-focus-inner {
+  border-style: none;
   padding: 0;
 }
-
-.u-section-4 .u-btn-2 {
-  background-image: none;
-  padding: 0;
+:where(
+    button,
+    input:is(
+        [type="button" i],
+        [type="color" i],
+        [type="reset" i],
+        [type="submit" i]
+      )
+  )::-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+:where(:-moz-ui-invalid) {
+  box-shadow: none;
+}
+:where(dialog) {
+  background-color: white;
+  border: solid;
+  color: black;
+  height: -moz-fit-content;
+  height: fit-content;
+  left: 0;
+  margin: auto;
+  padding: 1em;
+  position: absolute;
+  right: 0;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+:where(dialog:not([open])) {
+  display: none;
+}
+:where(summary) {
+  display: list-item;
 }
